non-parallel builds.

Use /bin/rpm from chroot jail whenever possible in case the jail's
version doesn't match the host's version.

Allow URL's in parameters passed to srctool (mzimport, mzmerge, etc.)
----------------------------------------------------------------------
Thu Feb 16 14:10:03 2006                        Michael Jennings (mej)

Added data object introspection routine.
----------------------------------------------------------------------
Tue Mar  7 06:22:48 2006                        Michael Jennings (mej)

Only handle URL's where appropriate.

Allow for merge file type specification along with URL for mzmerge.
----------------------------------------------------------------------
Tue Mar  7 07:10:04 2006                        Michael Jennings (mej)

Add routine for file uploads via POST.  Still needs debugging.
----------------------------------------------------------------------
Mon Mar 13 23:22:23 2006                        Michael Jennings (mej)

Allow POST requests to be redirected.
----------------------------------------------------------------------
Mon Mar 13 22:24:02 2006                        Michael Jennings (mej)

Support cookies when uploading/downloading.
----------------------------------------------------------------------
Wed Mar 15 00:31:28 2006                        Michael Jennings (mej)

If somebody (like me) mistakenly specifies a subversion repository
with -D to mzget, don't crap out.  Do the right thing.
----------------------------------------------------------------------
Mon Mar 27 14:51:37 2006                        Michael Jennings (mej)

Fix cookie module check.
----------------------------------------------------------------------
Tue Apr  4 16:50:40 2006                        Michael Jennings (mej)

Flag tainted objects in &examine_object().

Added a routine to untaint variables based on a regexp.
----------------------------------------------------------------------