@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: abiscan,v 1.1 2005/10/27 22:03:20 mej Exp $
+# $Id: abiscan,v 1.2 2006/06/06 01:29:58 mej Exp $
 #
 
 use strict;
@@ -60,17 +60,13 @@ print_usage_info
 sub
 scan_all_rpms()
 {
-    foreach my $rpm_name (sort(&rpm_get_installed())) {
-        my ($err, @output);
+    my ($err, @output);
 
-        dprint "Checking dependencies for $rpm_name:\n";
-        &pkgvar_name($rpm_name);
-        ($err, @output) = &rpm_query("abiscan");
-        if ($err) {
-            eprint "Unable to gather dependencies for $rpm_name:  $! (error $err)\n";
-            next;
-        }
-
+    &pkgvar_name("");
+    ($err, @output) = &rpm_query("reqprovall");
+    if ($err) {
+        eprint "Unable to gather dependencies:  $! $output[0] (error $err)\n";
+    } else {
         foreach my $line (@output) {
             chomp($line);
             dprint " -> $line\n";
@@ -87,7 +83,6 @@ main
     # For taint checks
     delete @ENV{("IFS", "CDPATH", "ENV", "BASH_ENV")};
     $ENV{"PATH"} = "/bin:/usr/bin:/sbin:/usr/sbin";
-    $ENV{"UNIX95"} = "1";  # Needed for the -o option of the ps command on HP-UX
     foreach my $shell ("/bin/bash", "/usr/bin/ksh", "/bin/ksh", "/bin/sh", "/sbin/sh") {
         if (-f $shell) {
             $ENV{"SHELL"} = $shell;
@@ -99,7 +94,7 @@ main
     if ($OPTION{"version"}) {
         # Do not edit this.  It is updated automatically by CVS when you commit.
         &print_version($PROGNAME, $VERSION, "Michael Jennings",
-                       'CVS Revision $Revision: 1.1 $ created on $Date: 2005/10/27 22:03:20 $ by $Author: mej $ ');
+                       'CVS Revision $Revision: 1.2 $ created on $Date: 2006/06/06 01:29:58 $ by $Author: mej $ ');
     } elsif ($OPTION{"help"}) {
 	&print_usage_info();
     }
