@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: revtool,v 1.92 2005/07/26 22:27:31 mej Exp $
+# $Id: revtool,v 1.93 2006/06/06 01:29:58 mej Exp $
 #
 
 use strict;
@@ -99,7 +99,7 @@ main
 
     if ($OPTION{"version"}) {
         &print_version($PROGNAME, $VERSION, "Michael Jennings <mej\@eterm.org>",
-                       'CVS Revision $Revision: 1.92 $ created on $Date: 2005/07/26 22:27:31 $ by $Author: mej $ ');
+                       'CVS Revision $Revision: 1.93 $ created on $Date: 2006/06/06 01:29:58 $ by $Author: mej $ ');
     }
     if ($OPTION{"help"}) {
 	&print_usage_info();
@@ -212,14 +212,15 @@ main
     }
 
     $scm->scmobj_propset(
-                  "repository" => $OPTION{"dir"},
-                  "keyword_expansion" => $OPTION{"keyword"},
-                  "recursion" => $OPTION{"recurse"},
-                  "reset" => $OPTION{"reset"},
-                  "source_tag" => $OPTION{"tag"},
-                  "target_tag" => $OPTION{"ttag"},
-                  "local_mode" => $OPTION{"local"}
-                 );
+                         "repository" => $OPTION{"dir"},
+                         "keyword_expansion" => $OPTION{"keyword"},
+                         "recursion" => $OPTION{"recurse"},
+                         "reset" => $OPTION{"reset"},
+                         "source_tag" => $OPTION{"tag"},
+                         "target_tag" => $OPTION{"ttag"},
+                         "local_mode" => $OPTION{"local"},
+                         "changelog_message" => $OPTION{"message"}
+                        );
     if (defined($OPTION{"exclusive"})) {
         if ($mode eq "import") {
             $scm->scmobj_propset("use_standard_ignore", !$OPTION{"exclusive"});
@@ -281,7 +282,7 @@ main
                     return $retval;
                 }
             }
-            $retval = $scm->put($OPTION{"message"}, @ARGV);
+            $retval = $scm->put(@ARGV);
         }
     }
     return $retval;
